# umx.ncnn

./: .gitmodules  0002-Config-openunmix-GPU-usage.patch  CMakeLists.txt  LICENSE  README.md  build-android-arm64-v8a-with-vulkan.sh  build-android-armv7-with-vulkan.sh  umx.cpp
model/: bass.ncnn.param  bass.opt.param  ncnnoptimize  other.ncnn.param
script/: export_ncnn.py
src/: inference.cpp  inference.hpp  model.cpp  model.hpp  tensor.hpp
